# django-playground

./: .env.docker-compose  .env.template.docker-compose  .gitignore  Dockerfile.local  Makefile  README.md  docker-compose.local.yml  init.sql  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
container/entrypoints/: entrypoint-worker.local.sh  entrypoint.local.sh
playground/: asgi.py  settings.py  urls.py  wsgi.py
playground/settings/: base.py  dev.py
sh/entrypoints/: entrypoint.local.sh
